[package]
name = "hardfight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ircie = { path = "../drugwars_v2/ircie" }
tokio = { version = "1.28.2", features = ["full"] }
env_logger = "0.10.0"
rand = "0.8.5"
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"